--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Puro Heritage</title>
 	  
-	  <link rel="stylesheet" type="text/css" href="css/style.css">	
+	  <link rel="stylesheet" type="text/css" href="style.css">	
   </head>
 
     <body>
 
         <div class="header">
-            <img src="images/logo_on_dark.png" class="logo">
+            <img src="logo_on_dark.png" class="logo">
 
           <a href="index.html">
             <div class="header_tab1">HOME</div>
@@ -44,11 +44,11 @@
 
         <!--landing page-->
         <div class="homepage_image1">
-            <img src="images/homepage_image1.png">
+            <img src="homepage_image1.png">
         </div>
 
         <div class="homepage_image2">
-            <img src="images/homepage_image2.png">
+            <img src="homepage_image2.png">
         </div>
 
         <div class="landing_page_heading">
@@ -65,12 +65,12 @@
     
         
         <div class="green-part">
-    <img class="green-img" src="images/green part.png">
+    <img class="green-img" src="green part.png">
 
     <p class="green-text">Get Pricing</p>
 
     <div class="arrow">
-        <img src="images/arroww.png">
+        <img src="arroww.png">
     </div>
 </div>
 
@@ -104,11 +104,11 @@ From concept development to flawless on-site <br> execution, our team delivers h
     </div>
 
     <div class="silver-section-ref">
-        <img src="images/silver-image-wo.png">
+        <img src="silver-image-wo.png">
     </div>
 
     <div class="silver-section-image-bg">
-        <img src="images/green bg silver.png">
+        <img src="green bg silver.png">
     </div>
 
     </div>
@@ -120,25 +120,25 @@ From concept development to flawless on-site <br> execution, our team delivers h
         </div>
 
         <div class="service1">
-            <img src="images/service1.png">
+            <img src="service1.png">
             <h1>Design</h1>
             <p>Creating modern, impactful,<br> and brand-aligned visuals that<br> turn ideas into standout<br> creative work.</p>
         </div>
 
         <div class="service2">
-            <img src="images/service2.png">
+            <img src="service2.png">
             <h1>Sales</h1>
             <p>Helping clients find the right<br> solutions while building strong<br> relationships that drive <br>consistent business growth.</p>
         </div>
 
         <div class="service3">
-            <img src="images/service3.png">
+            <img src="service3.png">
             <h1>Marketing</h1>
             <p>Executing strategic,<br> targeted campaigns that <br>boost brand visibility and <br>connect with the right <br>audience.</p>
         </div>
 
         <div class="service4">
-            <img src="images/service4.png">
+            <img src="service4.png">
             <h1>Production</h1>
             <p>Turning approved designs into<br> high-quality final outputs with <br>smooth, reliable, and efficient<br> execution.</p>
         </div>
@@ -153,21 +153,21 @@ From concept development to flawless on-site <br> execution, our team delivers h
        <div class="marquee-container">
     <div class="marquee-track">
 
-        <div class="item"><img src="images/1.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/2.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/3.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/4.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/5.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/6.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/7.jpg" class="zoomable"></div>
+        <div class="item"><img src="1.jpg" class="zoomable"></div>
+        <div class="item"><img src="2.jpg" class="zoomable"></div>
+        <div class="item"><img src="3.jpg" class="zoomable"></div>
+        <div class="item"><img src="4.jpg" class="zoomable"></div>
+        <div class="item"><img src="5.jpg" class="zoomable"></div>
+        <div class="item"><img src="6.jpg" class="zoomable"></div>
+        <div class="item"><img src="7.jpg" class="zoomable"></div>
 
-        <div class="item"><img src="images/1.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/2.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/3.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/4.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/5.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/6.jpg" class="zoomable"></div>
-        <div class="item"><img src="images/7.jpg" class="zoomable"></div>
+        <div class="item"><img src="1.jpg" class="zoomable"></div>
+        <div class="item"><img src="2.jpg" class="zoomable"></div>
+        <div class="item"><img src="3.jpg" class="zoomable"></div>
+        <div class="item"><img src="4.jpg" class="zoomable"></div>
+        <div class="item"><img src="5.jpg" class="zoomable"></div>
+        <div class="item"><img src="6.jpg" class="zoomable"></div>
+        <div class="item"><img src="7.jpg" class="zoomable"></div>
 
     </div>
 </div>
@@ -191,3 +191,4 @@ From concept development to flawless on-site <br> execution, our team delivers h
 <script src="javascript/main.js"></script>
     </body>
  </html>
+
