--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@ From concept development to flawless on-site <br> execution, our team delivers h
 
 
 
-<script src="javascript/main.js"></script>
+<script src="main.js"></script>
     </body>
  </html>
+
 
