--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Puro Heritage</title>
+      <title> Mauve Design </title>
 	  
 	  <link rel="stylesheet" type="text/css" href="style.css">	
   </head>
@@ -191,5 +191,6 @@ From concept development to flawless on-site <br> execution, our team delivers h
 <script src="main.js"></script>
     </body>
  </html>
+
 
 
