--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title> Mauve Design </title>
+      <title>Mauve Design</title>
 	  
 	  <link rel="stylesheet" type="text/css" href="style.css">	
   </head>
@@ -29,7 +29,7 @@
             <div class="header_tab4">GALLERY</div>
           </a>
           
-          <a href="contact-us.html">
+          <a href="contact_us.html">
             <div class="header_tab5">CONTACT US</div>
           </a>
 
@@ -181,16 +181,42 @@ From concept development to flawless on-site <br> execution, our team delivers h
 <!--map section starts here-->
 
  <div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1806983.6632987447!2d75.27836097499998!3d27.80161381523122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfb4870586943%3A0x49482c11a422f409!2sMauve%20Design%20Solution!5e0!3m2!1sen!2sin!4v1764932409775!5m2!1sen!2sin" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1806983.6632987447!2d75.27836097499998!3d27.80161381523122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfb4870586943%3A0x49482c11a422f409!2sMauve%20Design%20Solution!5e0!3m2!1sen!2sin!4v1764932409775!5m2!1sen!2sin" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
  </div>
 
+ <div class="footer">
+    <div class="footer-text-left">
+        Mauve Design Solution, today in a span of a limited time we have reached pan India and have stepped outside India also and this has happened only because we believe in “Service of the Highest Quality level“.
+        <br><br>
+        Is to be there when needed & we believe in our philosophy of service Service in Expo Industry, where we are reliable partners along with our vendors internationally and maintain a level of service and commitment to our clients and work as partners for the Exhibition.
+    </div>
+ </div>
 
+<div class="footer-text-right1">
+    <p>
+        +91 9818856622<br>
+        +91 9540885527
+    </p>
+    <img src="call.png">
+</div>
+
+<div class="footer-text-right2">
+    <p>
+        mauvedesignsolution@gmail.com<br>
+        info@mauvedesignsolution.in
+    </p>
+    <img src="maill.png">
+</div>
+
+<div class="footer-text-right3">
+    <p>
+        214, Cloud 9, Sector 1, Vaishali,<br> Ghaziabad (U.P) 201010
+    </p>
+    <img src="map.png">
+</div>
 
 
 
 <script src="main.js"></script>
     </body>
  </html>
-
-
-
