--- a/contact_us.html
+++ b/contact_us.html
@@ -5,13 +5,13 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Mauve Design</title>
 	  
-	  <link rel="stylesheet" type="text/css" href="css/contact-us.css">	
+	  <link rel="stylesheet" type="text/css" href="contact-us.css">	
   </head>
 
     <body>
 
         <div class="header">
-            <img src="images/logo_on_dark.png" class="logo">
+            <img src="logo_on_dark.png" class="logo">
 
           <a href="index.html">
             <div class="header_tab1">HOME</div>
@@ -101,7 +101,7 @@
         +91 9818856622<br>
         +91 9540885527
     </p>
-    <img src="images/call.png">
+    <img src="call.png">
 </div>
 
 <div class="footer-text-right2">
@@ -109,18 +109,19 @@
         mauvedesignsolution@gmail.com<br>
         info@mauvedesignsolution.in
     </p>
-    <img src="images/maill.png">
+    <img src="maill.png">
 </div>
 
 <div class="footer-text-right3">
     <p>
         214, Cloud 9, Sector 1, Vaishali,<br> Ghaziabad (U.P) 201010
     </p>
-    <img src="images/map.png">
+    <img src="map.png">
 </div>
 
 
 
 
     </body>
+
  </html>
