--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header_tab3">SERVICES</div>
           </a>   
 
-          <a href="hallery.html">
+          <a href="gallery.html">
             <div class="header_tab4">GALLERY</div>
           </a>
           
@@ -215,8 +215,31 @@ From concept development to flawless on-site <br> execution, our team delivers h
     <img src="map.png">
 </div>
 
+<div class="social-links">
+    <li>
+        <a href="https://www.youtube.com/channel/UCSFI9fJzDw4PaG-OW31aw5Q"> <img src="youtube.png"> </a>
+    </li>
 
+    <li>
+        <a href="https://www.facebook.com/mauvedesignsolution"> <img src="facebook.png"> </a>
+    </li>
+
+    <li>
+        <a href="https://www.instagram.com/mauvedesign_22/?igshid=YmMyMTA2M2Y%3D"> <img src="instagram.png"> </a>
+    </li>
+
+    <li>
+        <a href="https://wa.me/919876543210" target="_blank" style="text-decoration:none;"> <img src="whatsapp.png"> </a>
+    </li>
+</div>
+
+
+<div class="footer-bottom">
+    <span class="left">Copyright © 2022 MAUVE DESIGN SOLUTION</span>
+    <span class="right">Powered by MAUVE DESIGN SOLUTION</span>
+</div>
 
 <script src="main.js"></script>
     </body>
  </html>
+
