Refactor contact_us.html structure and content

--- a/contact_us.html
+++ b/contact_us.html
@@ -88,7 +88,7 @@
 
   
 
- <div class="footer">
+<div class="footer">
     <div class="footer-text-left">
         Mauve Design Solution, today in a span of a limited time we have reached pan India and have stepped outside India also and this has happened only because we believe in “Service of the Highest Quality level“.
         <br><br>
@@ -119,9 +119,31 @@
     <img src="map.png">
 </div>
 
+<div class="social-links">
+    <li>
+        <a href="https://www.youtube.com/channel/UCSFI9fJzDw4PaG-OW31aw5Q"> <img src="youtube.png"> </a>
+    </li>
+
+    <li>
+        <a href="https://www.facebook.com/mauvedesignsolution"> <img src="facebook.png"> </a>
+    </li>
+
+    <li>
+        <a href="https://www.instagram.com/mauvedesign_22/?igshid=YmMyMTA2M2Y%3D"> <img src="instagram.png"> </a>
+    </li>
+
+    <li>
+        <a href="https://wa.me/919876543210" target="_blank" style="text-decoration:none;"> <img src="whatsapp.png"> </a>
+    </li>
+</div>
 
 
+<div class="footer-bottom">
+    <span class="left">Copyright © 2022 MAUVE DESIGN SOLUTION</span>
+    <span class="right">Powered by MAUVE DESIGN SOLUTION</span>
+</div>
 
     </body>
 
  </html>
+
