--- a/contact_us.html
+++ b/contact_us.html
@@ -25,7 +25,7 @@
             <div class="header_tab3">SERVICES</div>
           </a>   
 
-          <a href="hallery.html">
+          <a href="gallery.html">
             <div class="header_tab4">GALLERY</div>
           </a>
           
@@ -146,4 +146,5 @@
     </body>
 
  </html>
+
 
