--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
     
-        
+      <a href="https://wa.me/918750366407?text=Hi%20I%20want%20pricing%20details" target="_blank" style="text-decoration:none;">  
         <div class="green-part">
     <img class="green-img" src="green part.png">
 
@@ -73,6 +73,7 @@
         <img src="arroww.png">
     </div>
 </div>
+	  </a>
 
     <!--second section-->
     <div class="silver-section">
@@ -242,4 +243,5 @@ From concept development to flawless on-site <br> execution, our team delivers h
 <script src="main.js"></script>
     </body>
  </html>
+
 
